--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "next-swagger-doc": "0.4.0",
     "react": "^18",
     "react-dom": "^18",
+    "@types/swagger-ui-react": "5.18.0",
     "swagger-ui-react": "^5.20.1"
   },
   "devDependencies": {
