--- a/package.json
+++ b/package.json
@@ -6,24 +6,33 @@
     "start": "next start"
   },
   "dependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/swagger-ui-react": "5.18.0",
+    "bcryptjs": "^3.0.2",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.5.0",
+    "mongoose": "^8.13.0",
     "next": "latest",
     "next-swagger-doc": "0.4.0",
     "react": "^18",
     "react-dom": "^18",
-    "@types/swagger-ui-react": "5.18.0",
+    "supertest": "^7.1.0",
     "swagger-ui-react": "^5.20.1"
   },
   "devDependencies": {
+    "@types/mongoose": "^5.11.96",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/supertest": "^6.0.3",
     "@types/swagger-ui-react": "^5.18.0",
     "autoprefixer": "^10.0.1",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.0.4",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^3.0.9"
   }
 }
